# markdown-vault

./: .gitignore  AGENTS.md  FEATURES.md  Makefile  README.md  meson.build
data/: de.hannemann.markdown-vault.desktop
data/css/: gtk.css  style.css
scripts/: test-app.sh
src/: app_window.py  config.py  editor.py  git_integration.py  history.py  latex_mathml.py  main.py  mru.py  path_utils.py  preferences.py  preview.py  search.py  search_logic.py  session.py  sidebar.py  tabs.py  tags.py  vault_monitor.py  vault_tree.py
src/share/markdown-vault/: de.hannemann.markdown-vault.desktop  meson.build
src/share/markdown-vault/css/: style.css
tests/: test_backlink_index.py  test_config.py  test_dirty_close.py  test_dirty_close_dialog.py  test_editor.py  test_external_changes.py  test_git_integration.py  test_history.py  test_latex_mathml.py  test_mru.py  test_preferences.py  test_preview.py  test_save_dialog_response.py  test_search.py  test_search_logic.py  test_search_logic_extended.py  test_session.py  test_sidebar.py  test_tabs.py  test_tags.py  test_validation.py  test_vault_monitor.py  test_vault_monitor_events.py  test_vault_tree_monitoring.py
