subdir('css')
subdir('icons')

install_data(
  'de.hannemann.markdown-vault.desktop',
  install_dir: get_option('datadir') / 'applications',
)

install_data(
  'de.hannemann.markdown-vault.metainfo.xml',
  install_dir: get_option('datadir') / 'metainfo',
)

install_data(
  'de.hannemann.markdown-vault.gresource.xml',
  install_dir: get_option('datadir') / 'markdown-vault',
)

install_data(
  'de.hannemann.markdown-vault.yml',
  install_dir: get_option('datadir') / 'markdown-vault',
)
